# ChangeLog for squashmount

*squashmount-10.0.2
	Martin Väth <martin at mvath.de>:
	- Fix etc/revdep-rebuild

*squashmount-10.0.1
	Martin Väth <martin at mvath.de>:
	- internal: prefer each() over index bookkeeping

*squashmount-10.0.0
	Martin Väth <martin at mvath.de>:
	- IMPORTANT: New default for COMPRESSION is lz4.
	  lz4 must be enabled for squashfs when you use the new default!
	  This is possible only with linux-3.19 or newer!
	- systemd is no longer officially supported, although it might work
	  for you. Reasons are explained in the README
	- Support $resquash_on_start and per mount-point RESQUASH_ON_START
	- Support $rm_rundir
	- Support $rm_dir, $rm_changes, $rm_workdir, $rm_readonly
	  and per mount-point RM_DIR, RM_CHANGES, RM_WORKDIR, RM_READONLY
	- Provide etc/revdep-rebuild

*squashmount-9.0.1
	Martin Väth <martin at mvath.de>:
	- Use openrc-run instead of deprecated runscript

*squashmount-9.0.0
	Martin Väth <martin at mvath.de>:
	- Support overlay of linux kernel 3.18.
	  Note the new name "overlay" in contrast to "overlayfs" which
	  is available only for older linux kernels.
	  squashmount uses "overlay" and "overlayfs" throughout to distinguish.
	- Fix logic for @order to work as documented
	- Fix $obsolete_overlay handling in config
	- Fix error in case of illegal cmd

*squashmount-8.7.9
	Martin Väth <martin at mvath.de>:
	- Fix comments in example configuration, see
	  https://github.com/vaeth/squashmount/issues/4
	  Thanks to Arnaudv6 for reporting

*squashmount-8.7.8
	Martin Väth <martin at mvath.de>:
	- Update description of recommended squashfs-tools patch

*squashmount-8.7.7
	Martin Väth <martin at mvath.de>:
	- Use gnu_getopt

*squashmount-8.7.6
	Martin Väth <martin at mvath.de>:
	- Support modprobe loop to work around a new udev bug

*squashmount-8.7.5
	Martin Väth <martin at mvath.de>:
	- systemd: set timout to infinity and document how to change it
	- zsh completion: Fix _tags mask test

*squashmount-8.7.4
*squashmount-8.7.3